// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to-contain <ReactElement> fails when the actual does not match the expected 1`] = `
"expected
<Fixture>
  <div>
    <ul>
      <li>
        <User id={1} name=\\"John\\">
          <span className=\\"user\\" id=\\"user-1\\">User 1</span>
        </User>
      </li>
      <li>
        <User id={2} name=\\"Doe\\">
          <span className=\\"user\\" id=\\"user-2\\">User 2</span>
        </User>
        <User id={3} name=\\"Mark\\">
          <span className=\\"user\\" id=\\"user-3\\">User 3</span>
        </User>
      </li>
    </ul>
  </div>
</Fixture>
to contain <User id={4} />

the best match was
<Fixture // should be <User
   // missing id={4}
/>"
`;

exports[`to-contain <ReactElement> when negated fails when the actual does match the expected 1`] = `
"expected
<Fixture>
  <div>
    <ul>
      <li>
        <User id={1} name=\\"John\\">
          <span className=\\"user\\" id=\\"user-1\\">User 1</span>
        </User>
      </li>
      <li>
        <User id={2} name=\\"Doe\\">
          <span className=\\"user\\" id=\\"user-2\\">User 2</span>
        </User>
        <User id={3} name=\\"Mark\\">
          <span className=\\"user\\" id=\\"user-3\\">User 3</span>
        </User>
      </li>
    </ul>
  </div>
</Fixture>
not to contain <User id={2} />

but found the following match
<Fixture // should be <User
   // missing id={2}
/>"
`;

exports[`to-contain <selector> fails when the actual does not match the expected 1`] = `
"expected
<Fixture>
  <div>
    <ul>
      <li>
        <User id={1} name=\\"John\\">
          <span className=\\"user\\" id=\\"user-1\\">User 1</span>
        </User>
      </li>
      <li>
        <User id={2} name=\\"Doe\\">
          <span className=\\"user\\" id=\\"user-2\\">User 2</span>
        </User>
        <User id={3} name=\\"Mark\\">
          <span className=\\"user\\" id=\\"user-3\\">User 3</span>
        </User>
      </li>
    </ul>
  </div>
</Fixture>
to contain '#user-4'"
`;
